qtsvg-opensource-src (5.3.0-1) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
  * Bump Qt build dependencies.
  * Change header's path in install files. Mark development packages as
    Multi-Arch: same.
  * Make libqt5svg5 provide qtsvg-abi-5-3-0 to track private symbols.
    - Modify symbols file for letting the tracking work.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 May 2014 12:14:42 -0300

qtsvg-opensource-src (5.2.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 24 Mar 2014 23:58:57 -0300

qtsvg-opensource-src (5.2.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.
  * Update symbols files with buildd's logs.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 19 Feb 2014 19:39:03 -0300

qtsvg-opensource-src (5.2.0-3) unstable; urgency=medium

  * Upload to unstable.
  * Update symbols files with buildd's logs.
  * Move mkspec files to their new location.
    - B-D on qtbase5-private-dev 5.2.0+dfsg-7 which changed the location.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 31 Jan 2014 18:08:42 -0300

qtsvg-opensource-src (5.2.0-2) experimental; urgency=low

  [ Pino Toscano ]
  * Update symbols file.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Bump qtbase4 build dependency to 5.2.0+dfsg-5, so as to get the fix for
    sparc's FTBFS.
  * Bump Standards-Version to 3.9.5, no changes needed.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 03 Jan 2014 09:48:54 -0300

qtsvg-opensource-src (5.2.0-1) experimental; urgency=low

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update qtbase build-dependencies to 5.2.0.
  * Explicitly define DEB_HOST_MULTIARCH in debian/rules.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Update symbols files with buildds' and current logs.
  * Update install files.
