@@ -7,6 +7,8 @@ qtsvg-opensource-src (5.3.0-1) UNRELEASED; urgency=medium
     Multi-Arch: same.
   * Make libqt5svg5 provide qtsvg-abi-5-3-0 to track private symbols.
     - Modify symbols file for letting the tracking work.
+    - Create mark_private_symbols.sh to mark the private symbols.
+    - Run mark_private_symbols.sh after dh_makeshlibs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 26 May 2014 12:14:42 -0300
 
